Fixed code to use arabic strings and use RTL correctly for arabic - Changes made by Sari

--- a/client-participation/index.html
+++ b/client-participation/index.html
@@ -412,6 +412,8 @@ if (<%= useIntercom %>) {
 
   if (window.ui_lang) {
     document.getElementsByTagName("body")[0].setAttribute("lang", ui_lang);
+    if (window.ui_lang.match(/^ar/))
+       document.getElementsByTagName("body")[0].setAttribute("dir", "rtl");
   }
 </script>
 
