Added service worker that can handle notifications that we send to it
So far nothing is sending notifications but the service worker can be tested form the browser dev tools in the application, Service Workers section

--- a/client-participation/index.html
+++ b/client-participation/index.html
@@ -48,6 +48,18 @@
 <script> // Fire off this ajax first. it's slower than the other CDN delivered things.
 (function() {
 
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', function() {
+    navigator.serviceWorker.register('<%= basepath %>/js/service-worker.js').then(function(registration) {
+      // Registration was successful
+      console.log('ServiceWorker registration successful with scope: ', registration.scope);
+    }, function(err) {
+      // registration failed :(
+      console.log('ServiceWorker registration failed: ', err);
+    });
+  });
+}
+
 function parseQueryParams(s) {
   if (typeof s !== "string") {
     return {};
